Refactoring the Pairs game using classes

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Найди пару</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script defer src="js/main.js"></script>
+  <script defer src="js/main.js" type="module"></script>
   <link rel="stylesheet" href="style/normalize.css">
   <link rel="stylesheet" href="style/style.css">
 </head>
